#43 changing functions for java memory allocation